--- a/index.html
+++ b/index.html
@@ -83,40 +83,42 @@
                                 
                 
 
-<script>
-    var rev = "fwd";
-    function titlebar(val){
-        var msg  = "fuck you";
-        var res = " ";
-        var speed = 100;
-        var pos = val;
-        msg = ""+msg+"";
-        var le = msg.length;
-        if(rev == "fwd"){
-            if(pos < le){
-                pos = pos+1;
-                scroll = msg.substr(0,pos);
-                document.title = scroll;
-                timer = window.setTimeout("titlebar("+pos+")",speed);
+    <script>
+        var rev = "fwd";
+        function titlebar(val){
+            var msg  = "fuck you";
+            var res = " ";
+            var speed = 100;
+            var pos = val;
+            msg = ""+msg+"";
+            var le = msg.length;
+            if(rev == "fwd"){
+                if(pos < le){
+                    pos = pos+1;
+                    scroll = msg.substr(0,pos);
+                    document.title = scroll;
+                    timer = window.setTimeout("titlebar("+pos+")",speed);
+                }
+                else {
+                    rev = "bwd";
+                    timer = window.setTimeout("titlebar("+pos+")",speed);
+                }
             }
             else {
-                rev = "bwd";
-                timer = window.setTimeout("titlebar("+pos+")",speed);
+                if(pos > 0) {
+                    pos = pos-1;
+                    var ale = le-pos;
+                    scrol = msg.substr(ale,le);
+                    document.title = scrol;
+                    timer = window.setTimeout("titlebar("+pos+")",speed);
+                }
+                else {
+                    rev = "fwd";
+                    timer = window.setTimeout("titlebar("+pos+")",speed);
+                }
             }
         }
-        else {
-            if(pos > 0) {
-                pos = pos-1;
-                var ale = le-pos;
-                scrol = msg.substr(ale,le);
-                document.title = scrol;
-                timer = window.setTimeout("titlebar("+pos+")",speed);
-            }
-            else {
-                rev = "fwd";
-                timer = window.setTimeout("titlebar("+pos+")",speed);
-            }
-        }
-    }
-    titlebar(0);
-</body></html>
+        titlebar(0);
+    </script>
+</body>
+</html>
