--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </div>
 
         <audio loop="" preload="auto" id="audio">
-            <source src="media/outlier.mp3" type="audio/mpeg">
+            <source src="media/vx.mp3" type="audio/mpeg">
         </audio>
     </div>
 
