--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
             <circle cx="12" cy="12" r="3"></circle>
         </svg>
-        <span>388</span>
+        <span>3954</span>
     </div>
 
     <div class="all">
@@ -128,7 +128,7 @@
         </div>
 
         <audio loop="" preload="auto" id="audio">
-            <source src="media/vx.mp3" type="audio/mpeg">
+            <source src="media/90mh.mp3" type="audio/mpeg">
         </audio>
     </div>
 
@@ -136,7 +136,7 @@
         function playAudio() {
             const audio = document.getElementById("audio");
             audio.volume = 1.0;
-            audio.currentTime = 0;
+            audio.currentTime = 26;
             audio.play();
         }
 
