--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <div class="all">
         <!-- Botão Discord no canto superior direito -->
-        <a href="https://discord.gg/cdm" class="discord-button" target="_blank">
+        <a href="https://discord.gg/nicks" class="discord-button" target="_blank">
             Discord
         </a>
 
